# qt-flif-plugin

./: .gitignore  CMakeLists.txt  README.md  extensions.json  project.pro
configuration/: imagethumbnail-flif.desktop  x-flif.desktop  x-flif.xml
configuration/qimageioplugins/: x-flif.desktop
krita/: 0003-ADD-flif.patch
src/: Flif++.hpp  FlifPlugin.cpp  FlifPlugin.hpp  extensions.json
